<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/back01"
    android:layout_height="match_parent"
    tools:context=".Activity.Admin.MangaAddActivity">
    <RelativeLayout
        android:id="@+id/addMangaLabel"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/shape_toolbar">

        <ImageButton
            android:id="@+id/addMangaBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/transparent"
            android:contentDescription="Back"
            android:padding="20dp"
            android:src="@drawable/ic_back_white">

        </ImageButton>
        <ImageView
            android:id="@+id/addMangaImg"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/logo_test"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true">
        </ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addANewManga"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/addMangaImg">
        </TextView>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/addNewMangaEditTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addMangaLabel"
        android:layout_margin="16dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/addMangaName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/addANewManga"/>
        <EditText
            android:id="@+id/addMangaDescription"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/addMangaDescription"/>
        <EditText
            android:id="@+id/addMangaPicture"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/addMangaPicture"/>
        <TextView
            android:id="@+id/addMangaCategory"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:drawableEnd="@drawable/ic_expand"
            android:hint="@string/addMangaCategory"
            android:textSize="18sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/addMangaPre"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:hint="@string/addMangaPremium"
                android:layout_weight="1"
                android:textSize="18sp"/>
            <CheckBox
                android:id="@+id/addMangaPreCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/addMangaSubmit"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Submit"
        android:layout_below="@+id/addNewMangaEditTxt"/>
</RelativeLayout>