<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ForgotFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:background="@drawable/forgot_layer_list"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/forgot_Banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Hình chữ nhật 1 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgotTittle"
                android:layout_marginBottom="8dp"
                android:textSize="30sp">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/forgotDescripstion"
                android:textSize="18sp"
                android:textColor="@color/gray1">
            </TextView>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/forgot_banner">
            </ImageView>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/forgotInputEmail_box"
            android:layout_below="@+id/forgot_Banner"
            android:layout_width="match_parent"

            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/forgot_emailTittle"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgotEnterEmail"
                android:textSize="20sp">
            </TextView>
            <EditText
                android:layout_below="@id/forgot_emailTittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/forgotEnterEmail"
                android:background="@drawable/input_default"
                android:textSize="20sp"
                android:padding="20dp"
                >
            </EditText>
        </RelativeLayout>
        <Button
            android:id="@+id/btnForgotSendOtp"
            android:layout_marginTop="50dp"
            android:padding="20dp"
            android:layout_below="@+id/forgotInputEmail_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/forgot_primary"
            android:hint="@string/sendOtp">
        </Button>
    </RelativeLayout>

</RelativeLayout>