<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.RegisterActivity">
    <ScrollView
        android:id="@+id/ResEmailOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/CreateEmailBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:scaleType="fitCenter"
                android:src="@drawable/register_background">
            </ImageView>
            <ImageButton
                android:id="@+id/backRegisterBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/transparent"
                android:padding="5dp"
                android:src="@drawable/ic_back_black"
                tools:ignore="TouchTargetSizeCheck">
            </ImageButton>
            <TextView
                android:id="@+id/HeadlineResEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/backRegisterBtn"
                android:layout_centerHorizontal="true"
                android:text="@string/headlineRegister"
                android:textAppearance="@style/let_s_get_s"
                android:fontFamily="@font/stylishregular">
            </TextView>
            <TextView
                android:id="@+id/HeadTiltleRes"
                android:layout_below="@+id/HeadlineResEmail"
                android:layout_marginTop="270dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/headlineTitleRes"
                android:fontFamily="@font/stylishregular"
                android:textAppearance="@style/registration"
                android:layout_centerHorizontal="true">
            </TextView>
            <TextView
                android:id="@+id/requestResEmail"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/HeadTiltleRes"
                android:layout_width="285dp"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:text="@string/RecommendRes"
                android:textAppearance="@style/RecommendRes"
                android:fontFamily="@font/ubuntubold"
                android:lineSpacingExtra="4dp"
                android:gravity="center_horizontal|center_vertical">
            </TextView>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registerEmail_act"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                app:endIconMode="clear_text"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/requestResEmail"
                android:layout_marginBottom="20dp">
                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_height="70dp"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:hint="@string/email"
                    android:textSize="20sp"
                    android:fontFamily="@font/inter"
                    android:background="@drawable/input_grayblur"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/text_login_input">
                </EditText>
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_below="@+id/registerEmail_act"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_centerHorizontal="true"
                >
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/registerBtn_act"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_accept"
                    android:fontFamily="@font/interextrabold"
                    android:text="@string/create"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp">
                </androidx.appcompat.widget.AppCompatButton>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/toLogin"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_tologin"
                    android:fontFamily="@font/interextrabold"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/btn_login"
                    android:textSize="20sp">
                </androidx.appcompat.widget.AppCompatButton>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
    <!---->
</RelativeLayout>