<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerificationFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/forgot_Banner"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/verified_banner">
        </ImageView>
        <LinearLayout
            android:id="@+id/forgotInputOtp_box"
            android:layout_below="@+id/forgot_Banner"
            android:layout_width="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/forgot_emailTittle"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/VerificationNotify"
                android:textSize="18sp">
            </TextView>
            <TextView
                android:id="@+id/forgot_EmailUserTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/testDemo"
                android:textStyle="bold"
                android:textSize="18sp">
            </TextView>
            <com.chaos.view.PinView
                android:id="@+id/pinview"
                style="@style/PinWidget.PinView"
                app:itemCount="4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:cursorVisible="true"
                android:inputType="number"
                android:itemBackground="@color/white">
            </com.chaos.view.PinView>
            <Button
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/forgot_primary"
                android:hint="@string/sendOtp">
            </Button>
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>